--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "rust"
+name = "tachyon"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+mlua = { version = "0.11.5", features = ["luajit", "module", "macros"] }
+nucleo = "0.5.0"
 
 [dev-dependencies]
 criterion = "0.8.0"
@@ -13,10 +15,7 @@ proptest-derive = "0.7.0"
 [lib]
 name = "tachyon"
 path = "src/lib/mod.rs"
-
-[[bin]]
-name = "tachyon"
-path = "src/main.rs"
+crate-type = ["cdylib"]
 
 [profile.release]
 strip = true
